# SimpleEngine

./: CMakeLists.txt  IDrawableObject.h  IDrawableObject.hpp  IGameObject.h  IGameObject.hpp  LICENSE  application.cpp  application.h  application.hpp  baseImage.cpp  baseImage.hpp  camera.cpp  camera.hpp  cameraSettings.hpp  configReader.cpp  configReader.h  configReader.hpp  engine.cpp  engine.h  engine.hpp  imageLoader.cpp  input.cpp  input.hpp  main  main.cpp  makefile  material.cpp  material.hpp  mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.h  model.hpp  objectReader.hpp  scene.cpp  scene.h  scene.hpp  sceneReader.cpp  sceneReader.h  (+14 more)
Projekt/: IDrawableObject.h  application.cpp  engine.cpp  engine.h  main.cpp  mesh.h  scene.h  shader.cpp  shader.h
assets/models/forest/: Bush1.mtl  Tree1_backup.mtl  floor.mtl  mountain.mtl
assets/models/sphere/: sphere.mtl
assets/models/text/: text.mtl
assets/scenes/: forest_scene.json  house_scene.json  scene.json  sphere_scene.json  sphere_scene_four.json  text.json
config/: config.json
core/: popis.txt  video.txt
core/config/: config.json
core/headers/: AmbientLight.hpp  IDrawableObject.hpp  IGameObject.hpp  ILight.hpp  ILoader.hpp  IObjectFactory.hpp  IObserver.hpp  ISubscriber.hpp  Material.hpp  MaterialFactory.hpp  SpotLight.hpp  application.hpp  camera.hpp  cameraSettings.hpp  configReader.hpp  defaultAssets.hpp  engine.hpp  gameObjectFactory.hpp  imageLoader.hpp  input.hpp  mesh.hpp  model.hpp  modelFactory.hpp  modelLoader.hpp  pointLight.hpp  position.hpp  publisher.hpp  rotation.hpp  scale.hpp  scene.hpp  sceneReader.hpp  shader.hpp  shaderFactory.hpp  shaderProgram.hpp  subject.hpp  texture.hpp  transform.hpp  transformComposite.hpp  vertex.hpp
core/src/: application.cpp  formular.txt  main.cpp
core/src/config/: configReader.cpp
core/src/engine/: AmbientLight.cpp  Material.cpp  camera.cpp  engine.cpp  imageLoader.cpp  input.cpp  pointLight.cpp  shader.cpp  shaderProgram.cpp  spotLight.cpp  texture.cpp  transformComposite.cpp
core/src/engine/factories/: MaterialFactory.cpp  gameObjectFactory.cpp  modelFactory.cpp
core/src/engine/loaders/: modelLoader.cpp
core/src/engine/shaders/: fragment.glsl  fragment_ambient.glsl  fragment_blinn_phong.glsl  fragment_blinn_phong_m.glsl  fragment_main.glsl  fragment_phong.glsl  fragment_test.glsl  vertex.glsl
core/src/scene/: mesh.cpp  model.cpp  scene.cpp  sceneReader.cpp
models/forest/: Tree1.mtl  trees.fbx
scenes/: forest_scene.json  scene.json
shaders/: fragment.glsl  fragment_1.glsl  fragment_2.glsl  vertex.glsl
